Implementing about us

--- a/back.html
+++ b/back.html
@@ -41,7 +41,7 @@
 
         VANTA.TOPOLOGY({
 
-            el: "vanta-canvas-aboutus",
+            el: "vanta-canvas",
             mouseControls: true,
             touchControls: true,
             gyroControls: false,
