changes about us

--- a/back.html
+++ b/back.html
@@ -1,57 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Vanta Globe</title>
-    <style type="text/css">
-        * {
-            margin: 0;
-            padding: 0;
-        }
+    <meta charset="UTF-8">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="check.css" />
 
-        #vanta-canvas {
-            width: 100%;
-            height: 100vh;
-        }
-    </style>
+    <title>Document</title>
 </head>
 
 <body>
-    <div id="vanta-canvas"></div>
-    
-</body>
 
-</html>
-
-
-
-
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title></title>
-</head>
-
-<body>
-    <div id="vanta-canvas-aboutus"></div>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.topology.min.js"></script>
-    <script>
-
-        VANTA.TOPOLOGY({
-
-            el: "vanta-canvas",
-            mouseControls: true,
-            touchControls: true,
-            gyroControls: false,
-            minHeight: 200.00,
-            minWidth: 200.00,
-            scale: 1.00,
-            scaleMobile: 1.00
-        })
-    </script>
-
+	<div class="sec full-height over-hide px-4 px-sm-0">
+		<div class="container">
+			<div class="row full-height justify-content-center">
+				<div class="col-lg-10 col-xl-8 align-self-center padding-tb">
+					<div class="sec mx-auto text-center slider-height-padding" style="justify-content: center;
+                    display: flex;">
+			          	<input class="checkbox frst" type="radio" id="slide-1" name="slider" checked/>
+			          	<label for="slide-1"></label>
+			          	<input class="checkbox scnd" type="radio" name="slider" id="slider-2"/>
+			          	<label for="slider-2"></label>
+			          	<input class="checkbox thrd" type="radio" name="slider" id="slider-3"/>
+			          	<label for="slider-3"></label>
+			          	<input class="checkbox foth" type="radio" name="slider" id="slider-4"/>
+			          	<label for="slider-4"></label>
+						<ul class="list">
+							<li>
+								<span>MALE GOOFY FACE</span>
+						    </li>
+							<li>
+								<span>TOY PIG</span>
+						    </li>
+							<li>
+								<span>SHY PORTRAIT</span>
+						    </li>
+							<li>
+								<span>SKATEBOARD FACE</span>
+						    </li>
+					    </ul>
+				    </div>
+			    </div>
+	      	</div>
+	    </div>
+	</div>
 </body>
 
 </html>
