--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 
 <head>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-  integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="table.css" />
   <link rel="stylesheet" href="container.css" />
@@ -17,6 +24,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vaccine Availability Checker</title>
   <link rel="shortcut icon" href="screenshot/Capture.PNG" type="image/x-icon" />
+  <link rel="stylesheet" href="check.css" />
+
 
   <!-- <style>
     .my-container {
@@ -36,12 +45,41 @@
 
 <body>
   <div id="vanta-canvas" style="background-color: black;">
-    <header id="title">
-      <!-- <img id="logo" onClick="location.reload()" src="screenshot/logo.png" /> -->
-      <div class="head_text1" onClick="location.reload()">Vaccine Availability Checker</div>
-      <div class="head_text2">Sakhi Learning LLP</div>
-    </header>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-dark" style="color: white;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <header id="title"></header>
+          <!-- <img id="logo" onClick="location.reload()" src="screenshot/logo.png" /> -->
+          <div class="head_text1" onClick="location.reload()">Vaccine Availability Checker</div>
+        </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- CHECK FOR RESPONSIVE BUTTON -->
+
+        <div class="collapse navbar-collapse" id="navbarNavDropdown" style="justify-content: flex-end;">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#vanta-canvas">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#vanta-canvas-aboutus">About Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+    <div class="head_text2">Sakhi Learning LLP</div>
     <div class="row d-flex justify-content-center">
+
       <div class="container my-container">
         <div class="row my-row">
           <div class="col-md-12 col-sm-12 my-col">
@@ -109,8 +147,8 @@
         <p style="font-size: large;text-align: left;padding: 1% 0% 0% 24%;
       width: 115%;">Facts people should know about covid-19</p>
 
-        <button style="margin-top:20% ;" type="button" class="btn btn-light"
-          onclick="window.open('https://www.who.int/news-room/q-a-detail/coronavirus-disease-(covid-19)-vaccines?adgroupsurvey={adgroupsurvey}&gclid=CjwKCAjww-CGBhALEiwAQzWxOuVujHyQiZMpPx79YybMrs_xPQrBP8QDnS2NLsbYbHJx2Ltq0OJRMhoCcGoQAvD_BwE')">
+        <button style="margin-top:35% ;" type="button" class="btn btn-light"
+          onclick="window.open('https://www.cowin.gov.in/faq')">
           <p style="font-size: larger;margin:0%;">Learn More</p>
         </button>
       </div>
@@ -121,34 +159,257 @@
   </div>
 
   <!-- 3rd  -->
-  <!-- <div> -->
-    <div id="vanta-canvas-aboutus" style="background-color: grey;display: flex;">
-        <div id="infoBlock1">
-          <img class="profilePic" src="screenshot/specimen.jpg" />
-          <i class="fab fa-linkedin" style="font-size: -webkit-xxx-large;"></i>
-        </div>
+  <div id="vanta-canvas-aboutus">
+    <!-- <div class="infoBlock">
+      <img class="profilePic" src="screenshot/specimen.jpg" />
+      <div class="aboutus-text">
+        <p style="padding: 5%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sit sint accusamus alias
+          delectus ex ullam veritatis quam itaque natus.</p>
+      </div>
+      <a href="#" class="text-decoration-none">Lorem, ipsum.</a><a href="#" class="text-decoration-none">
+        <i class="fab fa-linkedin" style="font-size: -webkit-xxx-large;"></i></a>
+    </div>
 
-        <div id="infoBlock1">
-          <img class="profilePic" src="screenshot/specimen.jpg" />
-          <i class="fab fa-linkedin" style="font-size: -webkit-xxx-large;"></i>
-        </div>
+    <div class="infoBlock">
+      <img class="profilePic" src="screenshot/specimen.jpg" />
+      <div class="aboutus-text">
+        <p style="padding: 5%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sit sint accusamus alias
+          delectus ex ullam veritatis quam itaque natus.</p>
+      </div>
+      <i class="fab fa-linkedin" style="font-size: -webkit-xxx-large;"></i>
+    </div>
 
-        <div id="infoBlock1">
-          <img class="profilePic" src="screenshot/specimen.jpg" />
-          <i class="fab fa-linkedin" style="font-size: -webkit-xxx-large;"></i>
-        </div>
+    <div class="infoBlock">
+      <img class="profilePic" src="screenshot/specimen.jpg" />
+      <div class="aboutus-text">
+        <p style="padding: 5%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sit sint accusamus alias
+          delectus ex ullam veritatis quam itaque natus.</p>
+      </div>
+      <i class="fab fa-linkedin" style="font-size: -webkit-xxx-large;"></i>
+    </div>
 
-        <div id="infoBlock1">
-          <img class="profilePic" src="screenshot/specimen.jpg" />
-          <i class="fab fa-linkedin" style="font-size: -webkit-xxx-large;"></i>
-        </div>
+    <div class="infoBlock">
+      <img class="profilePic" src="screenshot/specimen.jpg" />
+      <div class="aboutus-text">
+        <p style="padding: 5%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sit sint accusamus alias
+          delectus ex ullam veritatis quam itaque natus.</p>
+      </div>
+      <i class="fab fa-linkedin" style="font-size: -webkit-xxx-large;"></i>
+    </div>
 
-        <div id="infoBlock1">
-          <img class="profilePic" src="screenshot/specimen.jpg" />
-          <i class="fab fa-linkedin" style="font-size: -webkit-xxx-large;"></i>
+    <div class="infoBlock">
+      <img class="profilePic" src="screenshot/specimen.jpg" />
+      <div class="aboutus-text">
+        <p style="padding: 5%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sit sint accusamus alias
+          delectus ex ullam veritatis quam itaque natus.</p>
+      </div>
+      <i class="fab fa-linkedin" style="font-size: -webkit-xxx-large;"></i>
+    </div> -->
+    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <!-- <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+          <div class="carousel-item active">
+              <img src="screenshot/martin-sanchez-j2c7yf223Mk-unsplash.jpg" class="d-block profilePic" alt="First Slide">
+              <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Some representative placeholder content for the first slide.</p>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <img src="screenshot/filip-filkovic-philatz-cUQIhWLih5s-unsplash.jpg" class="d-block profilePic"
+                  alt="Second Slide">
+              <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <img src="screenshot/unsplash.png" class="d-block profilePic" alt="Third Slide">
+              <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+              </div>
+          </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+      </button>
+  </div>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"></script> -->
+
+
+    <!-- <div class="sec full-height over-hide px-4 px-sm-0">
+        <div class="container"> -->
+    <div class="row full-height justify-content-center" style="width: 100%;">
+
+        <div class="col-lg-10 col-xl-8 align-self-center padding-tb">
+          <div class="sec mx-auto text-center slider-height-padding" style="justify-content: center;
+                        display: flex;">
+            <input class="checkbox frst" type="radio" id="slide-1" name="slider" checked />
+            <label for="slide-1"></label>
+            <input class="checkbox scnd" type="radio" name="slider" id="slider-2" />
+            <label for="slider-2"></label>
+            <input class="checkbox thrd" type="radio" name="slider" id="slider-3" />
+            <label for="slider-3"></label>
+            <input class="checkbox foth" type="radio" name="slider" id="slider-4" />
+            <label for="slider-4"></label>
+            <ul class="list">
+              <li>
+                <span>MUKESH</span>
+              </li>
+              <li>
+                <span>TOY PIG</span>
+              </li>
+              <li>
+                <span>SHY PORTRAIT</span>
+              </li>
+              <li>
+                <span>SKATEBOARD FACE</span>
+              </li>
+            </ul>
+          </div>
         </div>
     </div>
-  <!-- </div> -->
+    <!-- </div>
+      </div> -->
+
+  </div>
+  <!-- //////////////////////////////////////////////////////////////////// -->
+
+
+
+
+
+  <!--Footer-->
+  <footer class="page-footer deep-purple center-on-small-only pt-0">
+
+    <!--Footer Links-->
+    <div class="container">
+
+      <!--Grid row-->
+      <div class="row pt-5 mb-3 text-center d-flex justify-content-center">
+
+        <!--Grid column-->
+        <div class="col-md-2 mb-3">
+          <h6 class="title font-bold"><a href="#!">About us</a></h6>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-md-2 mb-3">
+          <h6 class="title font-bold"><a href="#!">Products</a></h6>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-md-2 mb-3">
+          <h6 class="title font-bold"><a href="#!">Awards</a></h6>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-md-2 mb-3">
+          <h6 class="title font-bold"><a href="#!">Help</a></h6>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-md-2 mb-3">
+          <h6 class="title font-bold"><a href="#!">Contact</a></h6>
+        </div>
+        <!--Grid column-->
+
+      </div>
+      <!--Grid row-->
+
+      <hr class="rgba-white-light" style="margin: 0 15%;">
+
+      <!--Grid row-->
+      <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
+
+        <!--Grid column-->
+        <div class="col-md-8 col-12 mt-5">
+          <p style="line-height: 1.7rem">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+            doloremque laudantium,
+            totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
+            vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+            aut fugit, sed quia consequuntur.</p>
+
+        </div>
+        <!--Grid column-->
+
+      </div>
+      <!--Grid row-->
+
+      <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
+
+      <!--Grid row-->
+      <div class="row pb-3">
+
+        <!--Grid column-->
+        <div class="col-md-12">
+
+          <div class="footer-socials mb-5 flex-center">
+            <!--Facebook-->
+            <a class="icons-sm fb-ic"><i class="fa fa-facebook fa-lg white-text mr-md-4"> </i></a>
+            <!--Twitter-->
+            <a class="icons-sm tw-ic"><i class="fa fa-twitter fa-lg white-text mx-md-4"> </i></a>
+            <!--Google +-->
+            <a class="icons-sm gplus-ic"><i class="fa fa-google-plus fa-lg white-text mx-md-4"> </i></a>
+            <!--Linkedin-->
+            <a class="icons-sm li-ic"><i class="fa fa-linkedin fa-lg white-text mx-md-4"> </i></a>
+            <!--Instagram-->
+            <a class="icons-sm ins-ic"><i class="fa fa-instagram fa-lg white-text mx-md-4"> </i></a>
+            <!--Pinterest-->
+            <a class="icons-sm pin-ic"><i class="fa fa-pinterest fa-lg white-text ml-md-4"> </i></a>
+          </div>
+        </div>
+        <!--Grid column-->
+      </div>
+      <!--Grid row-->
+
+    </div>
+    <!--/Footer Links-->
+
+    <!--Copyright-->
+    <div class="footer-copyright">
+      <div class="container-fluid">
+        © 2016 Copyright: <a href="https://www.MDBootstrap.com"> MDBootstrap.com </a>
+      </div>
+    </div>
+    <!--/Copyright-->
+
+  </footer>
+  <!--/Footer-->
+
+
 
 
   <!-- ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
