Many things Implemented together

--- a/back.html
+++ b/back.html
@@ -2,50 +2,93 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="check.css" />
-
-    <title>Document</title>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="newabout.css" />
+	<title>Document</title>
 </head>
 
 <body>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+					</ol>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<div class="row">
+								<div class="col-md-4">
+									<div class="single-box">
+										<div class="img-area"><img src="screenshot/1.jpg" alt=""></div>
+										<div class="img-text">
+											<h2>Person One</h2>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum unde,
+												ullam provident tempore, assumenda officiis.</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="single-box">
+										<div class="img-area"><img src="screenshot/2.jpg" alt=""></div>
+										<div class="img-text">
+											<h2>Person Two</h2>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum unde,
+												ullam provident tempore, assumenda officiis.</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="single-box">
+										<div class="img-area"><img src="screenshot/3.jpg" alt="" style="height: 200px;"></div>
+										<div class="img-text">
+											<h2>Person Three</h2>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum unde,
+												ullam provident tempore, assumenda officiis.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 
-	<div class="sec full-height over-hide px-4 px-sm-0">
-		<div class="container">
-			<div class="row full-height justify-content-center">
-				<div class="col-lg-10 col-xl-8 align-self-center padding-tb">
-					<div class="sec mx-auto text-center slider-height-padding" style="justify-content: center;
-                    display: flex;">
-			          	<input class="checkbox frst" type="radio" id="slide-1" name="slider" checked/>
-			          	<label for="slide-1"></label>
-			          	<input class="checkbox scnd" type="radio" name="slider" id="slider-2"/>
-			          	<label for="slider-2"></label>
-			          	<input class="checkbox thrd" type="radio" name="slider" id="slider-3"/>
-			          	<label for="slider-3"></label>
-			          	<input class="checkbox foth" type="radio" name="slider" id="slider-4"/>
-			          	<label for="slider-4"></label>
-						<ul class="list">
-							<li>
-								<span>MALE GOOFY FACE</span>
-						    </li>
-							<li>
-								<span>TOY PIG</span>
-						    </li>
-							<li>
-								<span>SHY PORTRAIT</span>
-						    </li>
-							<li>
-								<span>SKATEBOARD FACE</span>
-						    </li>
-					    </ul>
-				    </div>
-			    </div>
-	      	</div>
-	    </div>
+						<div class="carousel-item">
+							<div class="row">
+								<div class="col-md-4">
+									<div class="single-box">
+										<div class="img-area"><img src="screenshot/4.jpg" alt="" style="height: 200px;"></div>
+										<div class="img-text">
+											<h2>Person Four</h2>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum unde,
+												ullam provident tempore, assumenda officiis.</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="single-box">
+										<div class="img-area"><img src="screenshot/5.jpg" alt="" style="height: 200px;"></div>
+										<div class="img-text">
+											<h2>Person Five</h2>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum unde,
+												ullam provident tempore, assumenda officiis.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
+
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"> </script>
 </body>
 
 </html>
