--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -22,7 +23,8 @@
   <link rel="stylesheet" href="background.css" />
   <link rel="stylesheet" href="theme.css" />
   <link rel="stylesheet" href="slide.css" />
-  <link rel="stylesheet" href="aboutus.css" />
+  <!-- <link rel="stylesheet" href="aboutus.css" / -->
+  <link rel="stylesheet" href="newabout.css" />
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -66,7 +68,8 @@
 </head>
 
 <body>
-  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up fa-2x" aria-hidden="true" style="color: #343434; size: 100%;"></i></button>
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up fa-2x" aria-hidden="true"
+      style="color: #343434; size: 100%;"></i></button>
   <script>
     //Get the button
     var mybutton = document.getElementById("myBtn");
@@ -94,7 +97,7 @@
     Your browser does not support HTML5 video.
     <p style="color: black;">YO</p>
   </video> -->
-  <div id="vanta-canvas" style="background: url(screenshot/pexels-jessica-lewis-4022785.jpg);background-size:105vw">
+  <div id="vanta-canvas">
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="color: white;">
       <div class="container-fluid">
@@ -122,12 +125,13 @@
             <li class="nav-item">
               <a class="nav-link" href="#vanta-canvas-aboutus">About Us </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <input type="checkbox" id="toggle" class="toggle--checkbox" />
               <label for="toggle" class="toggle--label">
                 <span class="toggle--label-background"></span>
               </label>
-            </li>
+            </li> -->
+            <!-- Theme Toggler -->
           </ul>
         </div>
       </div>
@@ -347,88 +351,208 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
       </button>
-  </div>
+      </div>
 
 
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
       integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
       crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
       integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
       crossorigin="anonymous"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"></script> -->
 
 
     <!-- <div class="sec full-height over-hide px-4 px-sm-0">
         <div class="container"> -->
-    <div class="row full-height justify-content-center" style="width: 100%;">
+    <!-- //////////////////////////////////////////////////////////////////// -->
+    <div class="boxCarousel">
+      <div class="row">
+        <div class="col-md-12">
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="single-box">
+                      <div class="img-area"><img src="screenshot/profilepic/khyati.png" alt=""></div>
+                      <div class="img-text">
+                        <h2>Khyati Sharma</h2>
+                        <p>Patient person who can learn things with clarity, while being good at leadership qualities</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="single-box">
+                      <div class="img-area"><img src="screenshot/profilepic/nikita.png" alt=""></div>
+                      <div class="img-text">
+                        <h2>Nikita Bhatnagar</h2>
+                        <p>Bold in her thoughts and good in management skills</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="single-box">
+                      <div class="img-area"><img src="screenshot/profilepic/yash.png" alt=""></div>
+                      <div class="img-text">
+                        <h2>Yash Agarwal</h2>
+                        <p>Quick learner while being prompt and disciplined</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
-      <div class="col-lg-10 col-xl-8 align-self-center padding-tb">
-        <div class="sec mx-auto text-center slider-height-padding" style="justify-content: center;
-                        display: flex;">
-          <input class="checkbox frst" type="radio" id="slide-1" name="slider" checked />
-          <label for="slide-1"></label>
-          <input class="checkbox scnd" type="radio" name="slider" id="slider-2" />
-          <label for="slider-2"></label>
-          <input class="checkbox thrd" type="radio" name="slider" id="slider-3" />
-          <label for="slider-3"></label>
-          <input class="checkbox foth" type="radio" name="slider" id="slider-4" />
-          <label for="slider-4"></label>
-          <input class="checkbox fith" type="radio" name="slider" id="slider-5" />
-          <label for="slider-5"></label>
-          <ul class="list">
-            <li>
-              <span>MUKESH</span>
-            </li>
-            <li>
-              <span>TOY PIG</span>
-            </li>
-            <li>
-              <span>SHY PORTRAIT</span>
-            </li>
-            <li>
-              <span>SKATEBOARD FACE</span>
-            </li>
-            <li>
-              <span>FACE</span>
-            </li>
-          </ul>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="single-box">
+                      <div class="img-area"><img src="screenshot/profilepic/mukesh.png" alt=""></div>
+                      <div class="img-text">
+                        <h2>Mukesh Yadav</h2>
+                        <p>Punctual and dedicated in his work, explore new areas and trustworhty in his work </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="single-box">
+                      <div class="img-area"><img src="screenshot/profilepic/akshit.png" alt=""></div>
+                      <div class="img-text">
+                        <h2>Akshit Bisht</h2>
+                        <p>Inquisitive about new things and poses technical mindset</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="single-box" style="color:transparent;">
+                      <div class="img-area" style="color:transparent;"></div>
+                      <div class="img-text" style="color:transparent;">
+                        <h2 style="color:transparent;">Mukesh Yadav</h2>
+                        <p style="color:transparent;">Punctual and dedicated in his work, explore new areas and trustworhty in his work </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <!-- </div>
-      </div> -->
-
   </div>
+
+  <div id="vanta-canvas-aboutus-mobile">
+    <div class="boxCarousel">
+      <div class="row">
+        <div class="col-md-12">
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="single-box">
+                      <div class="img-area"><img src="screenshot/profilepic/khyati.png" alt=""></div>
+                      <div class="img-text">
+                        <h2>Khyati Sharma</h2>
+                        <p>Patient person who can learn things with clarity, while being good at leadership qualities</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="single-box">
+                      <div class="img-area"><img src="screenshot/profilepic/nikita.png" alt=""></div>
+                      <div class="img-text">
+                        <h2>Nikita Bhatnagar</h2>
+                        <p>Bold in her thoughts and good in management skills</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="single-box">
+                      <div class="img-area"><img src="screenshot/profilepic/yash.png" alt=""></div>
+                      <div class="img-text">
+                        <h2>Yash Agarwal</h2>
+                        <p>Quick learner while being prompt and disciplined</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="single-box">
+                      <div class="img-area"><img src="screenshot/profilepic/mukesh.png" alt=""></div>
+                      <div class="img-text">
+                        <h2>Mukesh Yadav</h2>
+                        <p>Punctual and dedicated in his work, explore new areas and trustworhty in his work </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="single-box">
+                      <div class="img-area"><img src="screenshot/profilepic/akshit.png" alt=""></div>
+                      <div class="img-text">
+                        <h2>Akshit Bisht</h2>
+                        <p>Inquisitive about new things and poses technical mindset</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"> </script>
+
+
   <!-- //////////////////////////////////////////////////////////////////// -->
-
-
-
-
-
   <footer class="bg-light text-center text-lg-start">
-    <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(255, 255, 255, 0.2);">
       © 2021 Copyright:
       <a class="text-dark" href="#">Sakhi Learning LLP</a>
     </div>
-    <!-- Copyright -->
   </footer>
-
-
-
-
   <!-- ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
   <script src="https://maps.mapmyindia.com/covid-places/showNearbyCovidPlacesOnMap.js?category=HSPVCC"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.1/mustache.min.js"
     integrity="sha512-3GRj7sme01zpWwRNPNy48Rda1bD9cq34lqYG5vb8ZXGc+wRqsoBJ3+AC25IYW5w5SrWlzHqIpNIxZt5QF9sXLg=="
     crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
   <script src="interface.js"></script>
   <script src="staticData.js"></script>
   <script src="functions.js"></script>
@@ -497,3 +621,46 @@
 </body>
 
 </html>
+
+
+
+
+
+<!-- Beautiful Carousel -->
+<!-- //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////           -->
+<!-- <div class="row full-height justify-content-center" style="width: 100%;">
+
+      <div class="col-lg-10 col-xl-8 align-self-center padding-tb">
+        <div class="sec mx-auto text-center slider-height-padding" style="justify-content: center;
+                        display: flex;">
+          <input class="checkbox frst" type="radio" id="slide-1" name="slider" checked />
+          <label for="slide-1"></label>
+          <input class="checkbox scnd" type="radio" name="slider" id="slider-2" />
+          <label for="slider-2"></label>
+          <input class="checkbox thrd" type="radio" name="slider" id="slider-3" />
+          <label for="slider-3"></label>
+          <input class="checkbox foth" type="radio" name="slider" id="slider-4" />
+          <label for="slider-4"></label>
+          <input class="checkbox fith" type="radio" name="slider" id="slider-5" />
+          <label for="slider-5"></label>
+          <ul class="list">
+            <li>
+              <span>MUKESH</span>
+            </li>
+            <li>
+              <span>TOY PIG</span>
+            </li>
+            <li>
+              <span>SHY PORTRAIT</span>
+            </li>
+            <li>
+              <span>SKATEBOARD FACE</span>
+            </li>
+            <li>
+              <span>FACE</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div> -->
+<!-- //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////           -->
