--- a/index.html
+++ b/index.html
@@ -432,11 +432,11 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <div class="single-box" style="color:transparent;">
-                      <div class="img-area" style="color:transparent;"></div>
-                      <div class="img-text" style="color:transparent;">
-                        <h2 style="color:transparent;">Mukesh Yadav</h2>
-                        <p style="color:transparent;">Punctual and dedicated in his work, explore new areas and trustworhty in his work </p>
+                    <div class="single-box">
+                      <div class="img-area"><img src="screenshot/profilepic/aashishcoach.png" alt=""></div>
+                      <div class="img-text">
+                        <h2>Aashish Agarwal</h2>
+                        <p>Mentor</p>
                       </div>
                     </div>
                   </div>
